# docs/swagger.json
@@ -14,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Auth"
                 ],
                 "summary": "CurrentUser",
                 "operationId": "current-user",
@@ -38,7 +38,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Auth"
                 ],
                 "summary": "Logout",
                 "operationId": "logout",
@@ -62,7 +62,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Auth"
                 ],
                 "summary": "RefreshToken",
                 "operationId": "refresh-token",
@@ -86,7 +86,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Auth"
                 ],
                 "summary": "SignIn",
                 "operationId": "sign-in",
@@ -121,7 +121,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Auth"
                 ],
                 "summary": "SignUp",
                 "operationId": "sign-up",
@@ -132,7 +132,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.User"
+                            "$ref": "#/definitions/request.UserLogin"
                         }
                     }
                 ],
@@ -148,31 +148,6 @@
         }
     },
     "definitions": {
-        "request.User": {
-            "type": "object",
-            "required": [
-                "email",
-                "nickname",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "logg": {
-                    "type": "string"
-                },
-                "nickname": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 3
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 6
-                }
-            }
-        },
         "request.UserLogin": {
             "type": "object",
             "required": [
@@ -192,7 +167,10 @@
         "response.User": {
             "type": "object",
             "properties": {
-                "create_at": {
+                "address": {
+                    "type": "string"
+                },
+                "created_at": {
                     "type": "string"
                 },
                 "email": {
@@ -207,7 +185,10 @@
                 "nickname": {
                     "type": "string"
                 },
-                "update_at": {
+                "phone": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
